--- a/project1.0/index.html
+++ b/project1.0/index.html
@@ -112,9 +112,11 @@
                   <div class="pie-chart" data-tooltip-content="#tooltip_content">
                     <h6 class="subtitle">Channels</h6>
                     <img src="img/pie1.svg" alt="Channels">
+                    <div class="tooltip_templates">
                       <span id="tooltip_content">
                         <img src="img/tooltip.png">
                       </span>
+                    </div>
                   </div>
                   <div class="pie-chart" data-tooltip-content="#tooltip_content">
                     <h6 class="subtitle">Referrals</h6>
